erDiagram
    USERS {
        BIGSERIAL id PK
        VARCHAR full_name
        VARCHAR email UK
        VARCHAR phone_number UK
        VARCHAR national_id UK
        VARCHAR kyc_status
        VARCHAR password_hash
        VARCHAR status
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    ACCOUNTS {
        BIGSERIAL id PK
        BIGINT user_id FK
        VARCHAR account_number UK
        VARCHAR account_type
        VARCHAR currency
        NUMERIC balance
        VARCHAR status
        TIMESTAMP created_at
    }

    TRANSACTIONS {
        BIGSERIAL id PK
        VARCHAR reference_code UK
        BIGINT source_account_id FK
        BIGINT destination_account_id FK
        NUMERIC amount
        VARCHAR transaction_type
        VARCHAR status
        VARCHAR description
        TIMESTAMP created_at
    }

    CARDS {
        BIGSERIAL id PK
        BIGINT account_id FK
        VARCHAR card_number UK
        VARCHAR card_type
        DATE expiry_date
        VARCHAR cvv_hash
        VARCHAR status
        TIMESTAMP created_at
    }

    AUDIT_LOGS {
        BIGSERIAL id PK
        BIGINT user_id FK
        VARCHAR action
        VARCHAR entity_type
        BIGINT entity_id
        JSONB details
        TIMESTAMP created_at
    }

    USERS ||--o{ ACCOUNTS : owns
    USERS ||--o{ AUDIT_LOGS : generates

    ACCOUNTS ||--o{ CARDS : has

    ACCOUNTS ||--o{ TRANSACTIONS : source
    ACCOUNTS ||--o{ TRANSACTIONS : destination